--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5001
-MONGODB_URI=mongodb://localhost:27017/mtc-net
+# MONGODB_URI=mongodb://localhost:27017/mtc-net
+MONGODB_URI=mongodb+srv://debbaner1:Debdeep1@cluster0.d9bhb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=ilovechickennuggets
 JWT_REFRESH_SECRET=refresh1234
